Open java.base/java.lang for ALL-UNNAMED
Since jacoco 0.8.9 it does not open the java.lang package anymore,
so we need to do that on our own.

See "Agent should not open java.lang package to unnamed module of the application class loader"

https://github.com/jacoco/jacoco/pull/1334